--- a/Ticketbase/Views/Shared/_Layout.cshtml
+++ b/Ticketbase/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PhotoAlbum.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -24,16 +24,7 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Details">Concert Details</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Concerts" asp-action="Create">Add Concert</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Concerts" asp-action="Update">Update Concerts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Concerts" asp-action="Delete">Delete Concerts</a>
+                            <a class="nav-link text-dark" asp-controller="Genres" asp-action="Index">Concert Genres</a>
                         </li>
                     </ul>
                 </div>
@@ -48,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; Ticketbase - 2025  - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; Ticketbase - 2025
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
