--- a/Ticketbase/Views/Concerts/Details.cshtml
+++ b/Ticketbase/Views/Concerts/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Ticketbase.Models.Concert
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this? (Doing so will delete all associated genres.)</h3>
 <div>
     <h4>Concert</h4>
     <hr />
@@ -48,10 +47,8 @@
             @Html.DisplayFor(model => model.Genre.GenreID)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ConcertID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-controller="Home" asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.ConcertID">Edit</a> |
+    <a asp-controller="Home" asp-action="Index">Back to List</a>
 </div>
