--- a/Ticketbase/Views/Concerts/Edit.cshtml
+++ b/Ticketbase/Views/Concerts/Edit.cshtml
@@ -1,50 +1,50 @@
 ﻿@model Ticketbase.Models.Concert
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Concert</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Concerts" asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+            <input type="hidden" asp-for="ConcertID" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Filename" class="control-label"></label>
                 <input asp-for="Filename" class="form-control" />
                 <span asp-validation-for="Filename" class="text-danger"></span>
             </div>
-
+            <div class="form-group">
+                <label asp-for="CreateDate" class="control-label"></label>
+                <input asp-for="CreateDate" class="form-control" />
+                <span asp-validation-for="CreateDate" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="ConcertDate" class="control-label"></label>
                 <input asp-for="ConcertDate" class="form-control" />
                 <span asp-validation-for="ConcertDate" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="GenreID" class="control-label"></label>
                 <select asp-for="GenreID" class="form-control" asp-items="ViewBag.GenreID"></select>
                 <span asp-validation-for="GenreID" class="text-danger"></span>
             </div>
-
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -55,7 +55,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
