--- a/Ticketbase/wwwroot/css/site.css
+++ b/Ticketbase/wwwroot/css/site.css
@@ -2,3 +2,11 @@
     width: 150px;
     height: auto;
 }
+
+body {
+    background-color: #e0f5ff 
+}
+
+container {
+    background-color: #f5ffe0
+}
