--- a/Ticketbase/Views/Concerts/Create.cshtml
+++ b/Ticketbase/Views/Concerts/Create.cshtml
@@ -4,54 +4,51 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="container mt-5">
+    <h1>Create</h1>
+    <h4>Concert</h4>
+    <hr />
+    <form asp-controller="Concerts" asp-action="Create">
+        <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
-<h4>Concert</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="Concerts" asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="mb-3">
+            <label asp-for="Title" class="form-label"></label>
+            <input asp-for="Title" class="form-control" />
+            <span asp-validation-for="Title" class="text-danger"></span>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            <label asp-for="Description" class="form-label"></label>
+            <input asp-for="Description" class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            <label asp-for="Filename" class="form-label"></label>
+            <input asp-for="Filename" class="form-control" />
+            <span asp-validation-for="Filename" class="text-danger"></span>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="Filename" class="control-label"></label>
-                <input asp-for="Filename" class="form-control" />
-                <span asp-validation-for="Filename" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            <label asp-for="ConcertDate" class="form-label"></label>
+            <input asp-for="ConcertDate" class="form-control" />
+            <span asp-validation-for="ConcertDate" class="text-danger"></span>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="ConcertDate" class="control-label"></label>
-                <input asp-for="ConcertDate" class="form-control" />
-                <span asp-validation-for="ConcertDate" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            <label asp-for="GenreID" class="form-label"></label>
+            <select asp-for="GenreID" class="form-select" asp-items="ViewBag.GenreID"></select>
+            <span asp-validation-for="GenreID" class="text-danger"></span>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="GenreID" class="control-label"></label>
-                <select asp-for="GenreID" class="form-control" asp-items="ViewBag.GenreID"></select>
-                <span asp-validation-for="GenreID" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            <button type="submit" class="btn btn-primary">Create</button>
+        </div>
+    </form>
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="mt-3">
+        <a asp-controller="Home" asp-action="Index">Back to List</a>
     </div>
-</div>
-
-<div>
-    <a asp-controller="Home" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
