Assignment 2 started, fixing bugs where index view doesn't show updated image.

--- a/Ticketbase/Views/Concerts/Details.cshtml
+++ b/Ticketbase/Views/Concerts/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Filename)
+            @Html.DisplayNameFor(model => model.ConcertPhoto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Filename)
+            @Html.DisplayFor(model => model.ConcertPhoto)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreateDate)
