--- a/Ticketbase/Views/Concerts/Create.cshtml
+++ b/Ticketbase/Views/Concerts/Create.cshtml
@@ -8,7 +8,7 @@
     <h1>Create</h1>
     <h4>Concert</h4>
     <hr />
-    <form asp-controller="Concerts" asp-action="Create">
+    <form asp-controller="Concerts" asp-action="Create" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
         <div class="mb-3">
@@ -24,9 +24,9 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="Filename" class="form-label"></label>
-            <input asp-for="Filename" class="form-control" />
-            <span asp-validation-for="Filename" class="text-danger"></span>
+            <label asp-for="ConcertPhoto" class="form-label"></label>
+            <input type="file" asp-for="ConcertPhoto" class="form-control" />
+            <span asp-validation-for="ConcertPhoto" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
