--- a/Ticketbase/Views/Concerts/Delete.cshtml
+++ b/Ticketbase/Views/Concerts/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this? (Doing so will delete all associated genres.)</h3>
+<h3>Are you sure you want to delete this? (Doing so will delete all associated genres and photos.)</h3>
 <div>
     <h4>Concert</h4>
     <hr />
@@ -23,11 +23,8 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Filename)
-        </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Filename)
+            @Html.DisplayFor(model => model.ConcertPhoto)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreateDate)
