--- a/Ticketbase/Views/Home/Index.cshtml
+++ b/Ticketbase/Views/Home/Index.cshtml
@@ -15,27 +15,35 @@
         <tr>
             <th>@Html.DisplayNameFor(model => model.Title)</th>
             <th>@Html.DisplayNameFor(model => model.Description)</th>
-            <th>@Html.DisplayNameFor(model => model.Filename)</th>
+            <th>Image</th>
             <th>@Html.DisplayNameFor(model => model.CreateDate)</th>
             <th>@Html.DisplayNameFor(model => model.ConcertDate)</th>
             <th>@Html.DisplayNameFor(model => model.Genre)</th>
             <th></th>
         </tr>
     </thead>
+
     <tbody>
         
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.Title</td>
-                <td>@item.Description</td>
-                <td>@item.Filename</td>
-                <td>@item.CreateDate.ToString("yyyy-MM-dd HH:mm")</td>
-                <td>@item.ConcertDate.ToString("yyyy-MM-dd")</td>
-                <td>@item.Genre?.Title</td>
+                <td class="align-middle">@item.Title</td>
+                <td class="align-middle">@item.Description</td>
                 <td>
-                    <a asp-controller="Concerts" asp-action="Edit" asp-route-id="@item.ConcertID">Edit</a>
-                    <a asp-controller="Concerts" asp-action="Details" asp-route-id="@item.ConcertID">Details</a> 
+                    <div class="d-flex align-items-center">
+                            <img src="~/photos/@item.Filename"
+                                 alt="No photo."
+                                 class="img-thumbnail me-2"
+                                 style="max-height:100px;" />
+                    </div>
+                </td>
+                <td class="align-middle">@item.CreateDate.ToString("yyyy-MM-dd HH:mm")</td>
+                <td class="align-middle">@item.ConcertDate.ToString("yyyy-MM-dd")</td>
+                <td class="align-middle">@item.Genre?.Title</td>
+                <td class="align-middle">
+                    <a asp-controller="Concerts" asp-action="Edit" asp-route-id="@item.ConcertID">Edit</a> |
+                    <a asp-controller="Concerts" asp-action="Details" asp-route-id="@item.ConcertID">Details</a> |
                     <a asp-controller="Concerts" asp-action="Delete" asp-route-id="@item.ConcertID">Delete</a>
                 </td>
             </tr>
