--- a/Ticketbase/Views/Concerts/Edit.cshtml
+++ b/Ticketbase/Views/Concerts/Edit.cshtml
@@ -1,41 +1,31 @@
 ﻿@model Ticketbase.Models.Concert
 
-
 @{
     ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
-
 <h4>Concert</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <input type="hidden" asp-for="ConcertID" />
+            <input type="hidden" asp-for="Filename" />
+
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-
-            @* <div class="form-group">
-                <label asp-for="Filename" class="control-label"></label>
-                <img src="/photos/@Model.Filename" alt="@Model.Title" class="img-fluid" />
-                <input asp-for="Filename" class="form-control" />
-                <div class="mb-3">
-                    <label asp-for="ConcertPhoto" class="form-label"></label>
-                    <input type="file" asp-for="ConcertPhoto" class="form-control" />
-                    <span asp-validation-for="ConcertPhoto" class="text-danger"></span>
-                </div>
-                <span asp-validation-for="Filename" class="text-danger"></span>
-            </div> *@
 
             <div class="form-group">
                 <label asp-for="ConcertPhoto" class="control-label">Photo</label>
@@ -47,8 +37,6 @@
                     </div>
                 }
 
-                <input type="hidden" asp-for="Filename" />
-
                 <input type="file" asp-for="ConcertPhoto" class="form-control" />
                 <span asp-validation-for="ConcertPhoto" class="text-danger"></span>
                 <span asp-validation-for="Filename" class="text-danger"></span>
@@ -56,19 +44,22 @@
 
             <div class="form-group">
                 <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
+                <input asp-for="CreateDate" class="form-control" readonly />
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="ConcertDate" class="control-label"></label>
                 <input asp-for="ConcertDate" class="form-control" />
                 <span asp-validation-for="ConcertDate" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="GenreID" class="control-label"></label>
                 <select asp-for="GenreID" class="form-control" asp-items="ViewBag.GenreID"></select>
                 <span asp-validation-for="GenreID" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -81,5 +72,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
